🐛 fix: improve dark mode and OS theme handling (#380)

--- a/sass/skins/blue.scss
+++ b/sass/skins/blue.scss
@@ -1,7 +1,22 @@
+@mixin theme-variables($theme) {
+    @if $theme =='light' {
+        --primary-color: #3271E7; // Contrast ratio: 4.51:1
+    }
+    @else if $theme == 'dark' {
+        --primary-color: #6cacff; // Contrast ratio: 7.05:1
+    }
+}
+
 :root {
-    --primary-color: #3271E7; // Contrast ratio: 4.51:1
+    @include theme-variables('light');
 }
 
 [data-theme='dark'] {
-    --primary-color: #6cacff; // Contrast ratio: 7.05:1
+    @include theme-variables('dark');
+}
+
+@media (prefers-color-scheme: dark) {
+    :root:not([data-theme='light']) {
+        @include theme-variables('dark');
+    }
 }
